[package]
name = "ytvoderino"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
reqwest = {version = "0.11.22", features = ["default", "blocking", "cookies", "json", "socks"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.108"
sysinfo = "0.29.11"
tokio = {version = "1", features = ["full"]}
